--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.7",
         "morgan": "^1.10.0",
         "passport": "^0.4.1",
