--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.21.1",
+        "bcrypt": "^5.0.1",
         "bootstrap": "^4.6.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -19,6 +20,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^1.5.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "serve-favicon": "^2.5.0",
         "web-vitals": "^1.1.1"
