--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.7",
         "morgan": "^1.10.0",
+        "movie-trailer": "^2.1.0",
         "passport": "^0.4.1",
         "passport-google-oauth": "^2.0.0",
         "react": "^17.0.2",
@@ -22,6 +23,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-youtube": "^7.13.1",
         "serve-favicon": "^2.5.0",
         "web-vitals": "^1.1.1"
     },
