--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^5.1.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
@@ -19,7 +19,8 @@
         "passport": "^0.4.1",
         "passport-google-oauth": "^2.0.0",
         "react": "^17.0.2",
-        "react-bootstrap": "^1.5.2",
+        "react-bootstrap": "^2.0.0-beta.5",
+        "react-bootstrap-floating-label": "^1.6.0",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
